--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy 20th Birthday, Matamela!</title>
   <!-- Google Fonts for a handwritten style -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -22,7 +23,7 @@
 
     /* Header Section Styles */
     .hero {
-      background: linear-gradient(135deg, #e780b2, #230222); /* pastel gradient */
+      background: linear-gradient(135deg, #e780b2, #230222);
       padding: 60px 20px;
       text-align: center;
       position: relative;
@@ -42,7 +43,7 @@
       display: inline-block;
       animation: wiggle 2s infinite;
     }
-    /* Style the button: white text with transparent background and white border */
+    /* Style the button */
     .button-container {
       text-align: center;
       margin-bottom: 20px;
@@ -56,6 +57,7 @@
       font-size: 1.2rem;
       cursor: pointer;
       transition: background 0.3s ease;
+      min-width: 120px;
     }
     button:hover {
       background: rgba(255,255,255,0.2);
@@ -70,7 +72,7 @@
     .gallery h2 {
       font-size: 2.5rem;
       margin-bottom: 20px;
-      color: #9a4788; /* pastel purple */
+      color: #9a4788;
       text-align: center;
     }
     .photo-grid {
@@ -79,7 +81,7 @@
       justify-content: center;
       gap: 15px;
     }
-    /* Polaroid-style container for iframes */
+    /* Polaroid-style container */
     .polaroid {
       background: white;
       padding: 10px;
@@ -89,7 +91,7 @@
       position: relative;
       margin: 10px;
       width: 300px;
-      height: 225px; /* 4:3 aspect ratio */
+      height: 225px;
       overflow: hidden;
       animation: wigglePolaroid 3s infinite;
     }
@@ -168,7 +170,7 @@
 
     /* Modal Styles */
     .modal {
-      display: none; /* Hidden by default */
+      display: none;
       position: fixed;
       z-index: 1000;
       left: 0;
@@ -182,12 +184,13 @@
     }
     .modal-content {
       background: white;
-      padding: 20px;
+      padding: 30px 20px;
       border-radius: 8px;
       width: 90%;
       max-width: 500px;
       text-align: center;
       position: relative;
+      margin: 15px;
     }
     .modal-content p {
       font-size: 1.2rem;
@@ -205,88 +208,61 @@
       color: #666;
     }
 
-    /* Responsive adjustments */
-    @media (max-width: 600px) {
-      .hero h1 {
-        font-size: 2.2rem;
-      }
-      button {
-        font-size: 1rem;
-        padding: 10px 20px;
-      }
-      .polaroid {
-        width: 200px;
-        height: 150px;
-      }
-      #big-envelope {
-        width: 120px;
-        height: 120px;
-      }
-      #big-envelope i {
-        font-size: 2.5rem;
-      }
-      #big-envelope span {
-        font-size: 1rem;
-      }
-    }
-
+    /* Bouquet Builder Section */
     .bouquet-builder {
-  background: #fff0f5;
-  padding: 60px 20px;
-  text-align: center;
-}
-.bouquet-builder h2 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: #d56ba3;
-}
-.flower-options {
-  font-size: 2rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 15px;
-  margin-bottom: 30px;
-}
-.flower-emoji {
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-.flower-emoji:hover {
-  transform: scale(1.2);
-}
-.bouquet-vase {
-  background: white;
-  border: 2px dashed #d56ba3;
-  padding: 20px;
-  border-radius: 10px;
-  min-height: 80px;
-  max-width: 400px;
-  margin: 0 auto;
-}
-#bouquet {
-  font-size: 2rem;
-  margin-top: 10px;
-}
-#bouquet-message {
-  margin-top: 30px;
-  font-size: 1.5rem;
-  color: #a1438d;
-  animation: fadeIn 2s ease;
-}
-.hidden {
-  display: none;
-}
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-.modal-content p, #bouquet-message p {
-      font-family: 'Roboto', sans-serif !important;
-      font-weight: 300;
+      background: #fff0f5;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .bouquet-builder h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #d56ba3;
+    }
+    .flower-options {
+      font-size: 2rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 30px;
+    }
+    .flower-emoji {
+      cursor: pointer;
+      transition: transform 0.2s;
+      padding: 10px;
+    }
+    .flower-emoji:hover {
+      transform: scale(1.2);
+    }
+    .bouquet-vase {
+      background: white;
+      border: 2px dashed #d56ba3;
+      padding: 20px;
+      border-radius: 10px;
+      min-height: 80px;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    #bouquet {
+      font-size: 2rem;
+      margin-top: 10px;
+    }
+    #bouquet-message {
+      margin-top: 30px;
+      font-size: 1.5rem;
+      color: #a1438d;
+      animation: fadeIn 2s ease;
+    }
+    .hidden {
+      display: none;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
+    /* Progress Bar */
     .progress-bar {
       width: 80%;
       max-width: 400px;
@@ -296,7 +272,6 @@
       margin: 20px auto;
       overflow: hidden;
     }
-
     .progress-fill {
       width: 0%;
       height: 100%;
@@ -304,33 +279,80 @@
       transition: width 0.5s ease;
     }
 
-    .instructions {
-      font-family: 'Roboto', sans-serif;
-      color: #666;
-      margin: 15px 0;
-      font-size: 1rem;
+    /* Footer */
+    .simple-signature {
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+      border-top: 1px solid #e780b2;
+    }
+    .signature-line {
+      font-family: 'Dancing Script', cursive;
+      font-size: 1.2rem;
+      color: #9a4788;
+    }
+    .heart {
+      color: #e780b2;
+      margin-right: 5px;
+      transition: transform 0.3s ease;
+    }
+    .name {
+      font-weight: 500;
     }
 
-    /* Modify bouquet-builder section */
-    .bouquet-builder {
-      padding: 40px 20px;
-    }
-
+    /* Responsive Adjustments */
     @media (max-width: 600px) {
+      .hero {
+        padding: 40px 15px;
+      }
+      .hero h1 {
+        font-size: 2.5rem;
+        line-height: 1.3;
+        margin-bottom: 15px;
+      }
+      .wiggle {
+        display: none;
+      }
+      .polaroid {
+        width: 90%;
+        max-width: 300px;
+        height: 200px;
+        margin: 10px auto;
+      }
+      .gallery h2 {
+        font-size: 2rem;
+      }
+      button {
+        padding: 15px 30px;
+        font-size: 1.2rem;
+      }
+      #big-envelope {
+        width: 120px;
+        height: 120px;
+      }
+      #big-envelope i {
+        font-size: 2.5rem;
+      }
       .bouquet-builder h2 {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
       }
       .flower-options {
+        font-size: 2rem;
+        gap: 20px;
+      }
+      .bouquet-vase {
+        max-width: 90%;
+      }
+      .progress-bar {
+        width: 90%;
+      }
+      .modal-content p {
         font-size: 1.5rem;
       }
-      #bouquet {
-        font-size: 1.5rem;
-      }
-      .instructions {
-        font-size: 0.9rem;
+      .signature-line {
+        font-size: 1rem;
       }
     }
-
   </style>
 </head>
 <body>
@@ -346,11 +368,9 @@
     </div>
   </header>
 
-  <!-- Gallery Section with Floating Flower Emojis -->
+  <!-- Gallery Section -->
   <section class="flower-section">
-    <!-- Container for floating flower emojis -->
     <div id="flower-container"></div>
-    
     <div class="gallery">
       <h2>Snapshots of the Birthday Girl</h2>
       <div class="photo-grid">
@@ -370,7 +390,6 @@
           <iframe src="https://drive.google.com/file/d/1ASsjzynaf0AmFGFuggeJbfC22NppPvmx/preview" allow="autoplay"></iframe>
         </div>
       </div>
-      <!-- Big Envelope Container -->
       <div class="big-envelope-container">
         <div id="big-envelope">
           <i class="fas fa-envelope"></i>
@@ -397,6 +416,7 @@
     </div>
   </div>
 
+  <!-- Bouquet Builder -->
   <section class="bouquet-builder">
     <h2>Build Your Birthday Bouquet 🌸</h2>
     <div class="instructions">Choose 5 flowers by clicking on them to create your special bouquet, and reveal a secret message!</div>
@@ -421,12 +441,19 @@
       <p>Like these blooms, may your year ahead be colorful, vibrant, and full of wonderful surprises!</p>
     </div>
   </section>
-  
 
-  <!-- Confetti Library -->
+  <!-- Footer -->
+  <footer class="simple-signature">
+    <div class="signature-line">
+      <span class="heart">✨</span>
+      <span class="name">Zaahid De-Almeida</span>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
-    // Surprise button triggers confetti
+    // Confetti Effect
     const surpriseBtn = document.getElementById('surpriseBtn');
     surpriseBtn.addEventListener('click', () => {
       confetti({
@@ -436,14 +463,12 @@
       });
     });
 
-    // Function to create a floating flower emoji
+    // Floating Flowers
     function createFlower() {
       const flower = document.createElement('div');
       flower.classList.add('floating-flower');
-      // Use normal flower emojis from the array
       const emojis = ["🌹", "🌷", "💐", "🌺", "🌸", "🌼", "🌻", "🌿"];
       flower.innerText = emojis[Math.floor(Math.random() * emojis.length)];
-      // Randomize horizontal position, size, and animation speed
       flower.style.left = Math.random() * 100 + 'vw';
       flower.style.bottom = '-50px';
       const size = 20 + Math.random() * 20;
@@ -451,13 +476,11 @@
       const duration = 5 + Math.random() * 5;
       flower.style.animationDuration = duration + 's';
       document.getElementById('flower-container').appendChild(flower);
-      // Remove the flower once its animation is complete
       setTimeout(() => flower.remove(), duration * 1000);
     }
-    // Create a new flower emoji every 700ms
     setInterval(createFlower, 700);
 
-    // Modal functionality for big envelope
+    // Modal Functionality
     const bigEnvelope = document.getElementById('big-envelope');
     const messageModal = document.getElementById('messageModal');
     const closeModal = document.querySelector('.close-modal');
@@ -470,16 +493,13 @@
       messageModal.style.display = "none";
     });
 
-    // Also close modal when clicking outside the modal content
     window.addEventListener('click', (event) => {
       if (event.target === messageModal) {
         messageModal.style.display = "none";
       }
     });
-  </script>
 
-<script>
-    // Modified bouquet builder script
+    // Bouquet Builder
     const bouquetContainer = document.getElementById("bouquet");
     const messageBox = document.getElementById("bouquet-message");
     const flowers = document.querySelectorAll(".flower-emoji");
@@ -495,7 +515,6 @@
           bouquetContainer.innerText = pickedFlowers.join(" ");
           progressFill.style.width = `${(pickedFlowers.length/maxFlowers)*100}%`;
           
-          // Add temporary animation
           flower.style.transform = "scale(1.3)";
           setTimeout(() => flower.style.transform = "scale(1)", 200);
 
@@ -512,49 +531,5 @@
       });
     });
   </script>
-<!-- Add this right before the closing </body> tag -->
-<footer class="simple-signature">
-    <div class="signature-line">
-      <span class="heart">✨</span>
-      <span class="name">Zaahid De-Almeida</span>
-    </div>
-  </footer>
-  
-  <style>
-    .simple-signature {
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-      border-top: 1px solid #e780b2;
-    }
-  
-    .signature-line {
-      font-family: 'Dancing Script', cursive;
-      font-size: 1.2rem;
-      color: #9a4788;
-    }
-  
-    .heart {
-      color: #e780b2;
-      margin-right: 5px;
-      transition: transform 0.3s ease;
-    }
-  
-    .name {
-      font-weight: 500;
-    }
-  
-    .heart:hover {
-      transform: scale(1.2);
-    }
-  
-    @media (max-width: 600px) {
-      .signature-line {
-        font-size: 1rem;
-      }
-    }
-  </style>
-
-  
 </body>
 </html>
