--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+   /* Custom Scrollbar */
+    ::-webkit-scrollbar {
+      width: 12px;
+    }
+    ::-webkit-scrollbar-track {
+      background: #fff0f5;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #e780b2;
+      border-radius: 6px;
+      border: 3px solid #fff0f5;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #d969a1;
+    }
+    
     /* Global reset and base */
     * {
       box-sizing: border-box;
